# generative_agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  ROADMAP.md  alembic.ini  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stanford.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: BRANCH_STRATEGY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: cd.yml  ci.yml  pages.yml  security.yml
benchmarks/: 100_tick_baseline.py  README.md  __init__.py  _common.py  add_entry.py  agent_scaling_profile.py  dialogue_throughput.py  history.json  memory_retrieval_benchmark.py
config/: engine_factory.py  launch_profile.py  nginx.conf  scenario.py  simulation_config.json  user_simulation_profile.example.json
docker/: entrypoint.sh
docs/: COMPARISON.md
docs/architecture/: DIAGRAMS.md  MODULARITY.md  OVERVIEW.md  UPSTREAM_RELATIONSHIP.md
docs/assets/: CAPTURE_DEMO.md  CAPTURE_GUIDE.md
docs/database/: SCHEMA.md
docs/guides/: CONFIGURATORE_SIMULAZIONE.md  DEVELOPER_ONBOARDING.md  DOCKER.md  OBSERVABILITY.md  PERFORMANCE_BASELINE.md  STANFORD_UI.md  WEBSOCKET_PROTOCOL.md  WEB_UI.md
docs/research/: LAYERS.md
docs/scenarios/: SCENARIOS.md
docs/tutorials/: CUSTOM_COGNITIVE_LAYER.md  CUSTOM_LLM_PROVIDER.md  GETTING_STARTED.md  PRODUCTION_DEPLOYMENT.md
environment/frontend_server/: Dockerfile.stanford
examples/: README.md  cognitive_biases.py  custom_scenario.py  hello_world.py  ollama_simple.py  openrouter_api.py
gen_agent/agents/: __init__.py  emotions.py  traits.py
gen_agent/cognitive/: __init__.py  biases.py  evolutionary.py  hrm.py  rlif.py  seal.py
gen_agent/dialogue/: __init__.py  dialogue_engine.py  dialogue_guards.py  intent_pack.py  ollama_manager.py  quality.py  quality_legacy.py
gen_agent/integrations/stanford/: __init__.py  adapter.py  cognitive.py  plan_to_poi.py  (+2 more)
gen_agent/interfaces/: __init__.py  memory_protocol.py  sim_protocol.py  stanford_adapter_protocol.py
gen_agent/llm/: __init__.py  circuit_breaker.py  council.py  mock_provider.py  ollama_provider.py  openrouter_provider.py  provider.py
gen_agent/memory/: __init__.py  manager.py  models.py  reflection.py
gen_agent/sim/: __init__.py  engine.py  missions.py  proximity.py
gen_agent/social/: __init__.py  consensus.py  game_theory.py  social_learning.py
gen_agent/telemetry/: __init__.py  reporter.py
gen_agent/world/: __init__.py  poi.py  world.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
output/: comparison_improved_vs_legacy.json  comparison_vs_legacy.json  comparison_vs_legacy_dense100.json  comparison_vs_legacy_dense100_dialogues.json  dialogue_quality.ndjson  parity_report.json  sim_blocking_100_full.json  sim_blocking_100_improved.json  sim_blocking_100_llama32.json  sim_blocking_100_new.json  sim_blocking_100_v2.json  sim_blocking_30_en.json  sim_blocking_30_new.json
portfolio/: README.md  astro.config.mjs  package.json
scenarios/: blocking_100.py  debate.py  default.py  offline.py
scripts/: compare_simulations.py  migrate.sh  print_comparison.py  run_legacy_blocking_100.py  run_server.py  run_sim_100_ticks_blocking.py  verify_all.py
server/: __init__.py  main.py  neat_manager.py  router.py  stanford_exporter.py  state_store.py  tick_runner.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
tests/integration/: test_server_smoke.py  test_sim_e2e_mock.py
web/: index.html
(+64 files in other folders)
