[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-agent"
version = "0.1.0"
description = "Modular generative agent simulation built on top of Stanford Generative Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "tiktoken>=0.5",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "structlog>=23.2",
    # Server
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
]

[project.optional-dependencies]
postgres = [
    # ponytail: only needed for prod/Docker; SQLite used for local dev
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.10",
    "ruff>=0.1",
    "mypy>=1.6",
    "bandit[toml]>=1.7",
    "pip-audit>=2.6",
    "pre-commit>=3.5",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gen_agent*", "server*", "config*", "scenarios*"]

[tool.black]
line-length = 99
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["gen_agent"]
# ponytail: optional research layers (NEAT, social learning, HRM) excluded from
# coverage gate — core parity path is sim/dialogue/memory/stanford/world
omit = [
    "gen_agent/training/*",
    "gen_agent/social/*",
    "gen_agent/cognitive/*",
    "gen_agent/memory/compression/*",
    "gen_agent/memory/graph/*",
    "gen_agent/memory/vector/*",
    "gen_agent/memory/privacy/*",
    # LLM providers require live Ollama/OpenAI/OpenRouter — excluded from unit gate
    "gen_agent/llm/*",
    # PostgreSQL backend requires a running Postgres instance
    "gen_agent/memory/storage/postgres_backend.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.bandit]
skips = ["B101"]
